--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ ps-flux/node_modules/.cache/babel-loader/227daf85c57afa7456424e54bae6bbc1.json
 ps-flux/node_modules/.cache/babel-loader/1b76ec1411115a0f33447fa77be5ac35.json
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
+ps-flux/node_modules/.cache/babel-loader/ee26bf84e537027b67e95f96c8a49d19.json
+ps-flux/node_modules/.cache/.eslintcache
+*.json
+ps-flux/node_modules/.cache/.eslintcache
