--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ps-flux/node_modules/.cache/babel-loader/ee26bf84e537027b67e95f96c8a49d19.json
 ps-flux/node_modules/.cache/.eslintcache
 *.json
 ps-flux/node_modules/.cache/.eslintcache
+ps-flux/node_modules/.cache/.eslintcache
