React Router contd'
Sync

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ps-flux/node_modules/.cache/.eslintcache
 *.json
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
+ps-flux/node_modules/.cache/.eslintcache
