--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
+ps-flux/node_modules/.cache/.eslintcache
