--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
 ps-flux/node_modules/.cache/.eslintcache
+ps-flux/node_modules/.cache/.eslintcache
